--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <table>
-        <menu>
-            <td>Hey Yall</td>
-        </menu>
-    </table>
+    <h1 id="myheading"></h1>
+    <p id = para1></p>
+    <p id = para2></p>
+    
+    
 </body>
 </html>
