--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href="stylesheet.css">
-    <source src = "index.js" defer>
+    <source src = "index.js">
     <title>Landing Page</title>
 </head>
 <body>
-    <h1 id="myheading"></h1>
-    <p id = para1></p>
-    <p id = para2></p>
-    
-    
+<table>
+    <p id="TextBlock">hello
+    </p>
+
+</table>
 </body>
 </html>
