--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href="stylesheet.css">
     <source src = "index.js">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Landing Page</title>
 </head>
 <body>
 <table>
-    <p id="TextBlock">hello
-    </p>
+    <h1>Hello Space Cowboy! Welcome to the Intergalatic Olypmics</h1>
+    <img id = simage src="\Images\Cat1.jpg">
+    <p id="para"></p>
+    <p id = "text1"></p>
+    <input type="text" id="userInput"><br>
+    <button type="submit" id="button1"></button>
 
 </table>
 </body>
