--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href="stylesheet.css">
-    <source src = "index.js">
+    <script src="index.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
     <title>Landing Page</title>
 </head>
@@ -14,8 +14,9 @@
     <img id = simage src="\Images\Cat1.jpg">
     <p id="para"></p>
     <p id = "text1"></p>
+    <label for="input">Please enter your name</label><br>
     <input type="text" id="userInput"><br>
-    <button type="submit" id="button1"></button>
+    <button type="submit" id="button1">Enter</button>
 
 </table>
 </body>
